--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,34 +7,24 @@ edition = "2021"
 
 [dependencies]
 cascade = "1.0.0"
-gdk4 = "0.4.4"
-gdk4-wayland = { version = "0.4.2", features = [ "wayland_crate" ], optional = true }
-gdk4-x11 = { version = "0.4.2", features = [ "xlib" ] }
-gio = "0.15.2"
-gobject-sys = "0.15.1"
+gtk4 = { version = "0.4.7", features = ["v4_4"] }
+gdk4-x11 = {version = "0.4.2", package = "gdk4-x11", features = ["xlib"]}
 wayland-client = { version = "0.29.4", optional = true }
 wayland-protocols = { version = "0.29.4", features = [ "client", "unstable_protocols" ], optional = true }
 x11 = { version = "2.19.1", features = ["xlib"] }
 libcosmic = { git = "https://github.com/pop-os/libcosmic" }
-
-# examples
-gtk4 = { version = "0.4.4", features = ["v4_4"] }
-gtk4-sys = "0.4.2"
-glib-sys = "0.15.1"
 relm4-macros = { git = "https://github.com/AaronErhardt/Relm4" }
 pop-launcher-service = { git = "https://github.com/wash2/launcher.git" }
 pop-launcher = { git = "https://github.com/wash2/launcher.git" }
 serde = "1.0.134"
 serde_json = "1.0.75"
-tokio = { version = "1.15.0", features = ["sync"] }
+tokio = { version = "1.17.0", features = ["sync", "rt", "rt-multi-thread"] }
 futures = "0.3.19"
 futures-util = "0.3.19"
 once_cell = "1.9.0"
+tokio-stream = "0.1.8"
+async-stream = "0.3.3"
 
 [profile.release]
 incremental = true
 debug = 1
-
-[features]
-layer-shell = ["gdk4-wayland", "wayland-client", "wayland-protocols"]
-
