--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,8 @@ futures-util = "0.3.19"
 once_cell = "1.9.0"
 tokio-stream = "0.1.8"
 async-stream = "0.3.3"
-cosmic-theme = { path = "../cosmic-theme" }
+#cosmic-theme = { path = "../cosmic-theme" }
+cosmic-theme = { git = "https://github.com/pop-os/cosmic-theme" }
 
 [profile.release]
 incremental = true
