--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-/target
+target/
+build/
+_build/
+builddir/
+build-aux/app
+build-aux/.flatpak-builder/
+src/config.rs
+*.ui.in~
+*.ui~
+.flatpak/
+vendor
