--- a/build-aux/com.System76.CosmicLauncher.Devel.json
+++ b/build-aux/com.System76.CosmicLauncher.Devel.json
@@ -13,8 +13,8 @@
 	    "--filesystem=xdg-data/cosmic-theme:ro",
      	"--filesystem=xdg-config/cosmic-theme:ro",
 	    "--filesystem=xdg-data/cosmic-launcher:create",
-	    "--filesystem=host",
-	    "--filesystem=home",
+	    "--filesystem=host-os",
+	    "--filesystem=home/.local/share",
 	    "--socket=system-bus",
 	    "--socket=session-bus",
 	    "--talk-name=org.freedesktop.Flatpak",
