read access to /var/lib/flatpak

--- a/build-aux/com.System76.CosmicLauncher.Devel.json
+++ b/build-aux/com.System76.CosmicLauncher.Devel.json
@@ -12,8 +12,8 @@
      	"--filesystem=xdg-config/cosmic-theme:ro",
 	    "--filesystem=xdg-data/cosmic-theme:ro",
      	"--filesystem=xdg-config/cosmic-theme:ro",
-	    "--filesystem=xdg-data/cosmic-launcher:create",
 	    "--filesystem=host-os:ro",
+        "--filesystem=/var/lib/flatpak:ro",
 	    "--filesystem=home/.local/share:ro",
 	    "--socket=system-bus",
 	    "--socket=session-bus",
