--- a/src/meson.build
+++ b/src/meson.build
@@ -20,6 +20,9 @@ run_command(
 
 cargo_options = [ '--manifest-path', meson.project_source_root() / 'Cargo.toml' ]
 cargo_options += [ '--target-dir', meson.project_build_root() / 'src' ]
+if get_option('vendor')
+  cargo_options += [ '--frozen' ]
+endif
 
 if get_option('profile') == 'default'
   cargo_options += [ '--release' ]
