chore: Simplify build process

--- a/debian/control
+++ b/debian/control
@@ -7,9 +7,7 @@ Build-Depends:
   debhelper-compat (= 11),
   cargo,
   libgtk-4-dev,
-  meson,
-  meson (>= 0.40.0),
-  ninja-build,
+  just,
   pkg-config,
 Standards-Version: 4.3.0
 Homepage: https://github.com/pop-os/cosmic-launcher
