--- a/data/com.System76.CosmicLauncher.desktop
+++ b/data/com.System76.CosmicLauncher.desktop
@@ -1,12 +1,12 @@
 [Desktop Entry]
 Name=Cosmic Launcher
-Comment=Write a GTK + Rust application
+Comment=GTK4 application runner frontend for pop-launcher
 Type=Application
 Exec=cosmic-launcher
 Terminal=false
 Categories=GNOME;GTK;
 Keywords=Gnome;GTK;
 # Translators: Do NOT translate or transliterate this text (this is an icon file name)!
-Icon=@icon@
+Icon=com.system76.CosmicLauncher
 StartupNotify=true
 NoDisplay=true
