--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,10 @@ xdg = "2.4.0"
 anyhow = "1.0.56"
 freedesktop-desktop-entry = "0.5.0"
 
+[features]
+default = ["dev"]
+dev = []
+
 [profile.release]
 incremental = true
 debug = 1
