--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,9 @@ cosmic-theme = { git = "https://github.com/pop-os/cosmic-theme" }
 xdg = "2.4.0"
 anyhow = "1.0.56"
 freedesktop-desktop-entry = "0.5.0"
+i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
+i18n-embed-fl = "0.6.4"
+rust-embed = "6.3.0"
 
 [features]
 default = ["dev"]
