--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,16 +9,12 @@ log = "0.4"
 pretty_env_logger = "0.4"
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
 cascade = "1.0.0"
-gtk4 = { version = "0.4.7", features = ["v4_4"] }
-gdk4-x11 = {version = "0.4.2", package = "gdk4-x11", features = ["xlib"]}
-wayland-client = { version = "0.29.4", optional = true }
-wayland-protocols = { version = "0.29.4", features = [ "client", "unstable_protocols" ], optional = true }
-x11 = { version = "2.19.1", features = ["xlib"] }
-libcosmic = { git = "https://github.com/pop-os/libcosmic" }
 relm4-macros = { git = "https://github.com/Relm4/Relm4" }
+gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs", features=["v4_4"] }
+adw = { git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs", package = "libadwaita"}
+serde = { version = "1.0.134", features = ["derive"] }
 pop-launcher-service = { git = "https://github.com/wash2/launcher.git" }
 pop-launcher = { git = "https://github.com/wash2/launcher.git" }
-serde = "1.0.134"
 serde_json = "1.0.75"
 tokio = { version = "1.17.0", features = ["sync", "rt", "rt-multi-thread"] }
 futures = "0.3.19"
@@ -27,7 +23,6 @@ once_cell = "1.9.0"
 tokio-stream = "0.1.8"
 async-stream = "0.3.3"
 #cosmic-theme = { path = "../cosmic-theme" }
-cosmic-theme = { git = "https://github.com/pop-os/cosmic-theme" }
 xdg = "2.4.0"
 anyhow = "1.0.56"
 freedesktop-desktop-entry = "0.5.0"
@@ -36,7 +31,7 @@ i18n-embed-fl = "0.6.4"
 rust-embed = "6.3.0"
 
 [build-dependencies]
-gio = "0.15.10"
+glib-build-tools = { git = "https://github.com/gtk-rs/gtk-rs-core" }
 
 [profile.release]
 incremental = true
