--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ freedesktop-desktop-entry = "0.5.0"
 i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
 i18n-embed-fl = "0.6.4"
 rust-embed = "6.3.0"
+zbus = "3.0.0"
 
 [build-dependencies]
 glib-build-tools = { git = "https://github.com/gtk-rs/gtk-rs-core" }
