--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,14 @@
 Source: cosmic-launcher
 Section: admin
 Priority: optional
-Maintainer: system76 <info@system76.com>
+Maintainer: Ashley Wulber <ashley@system76.com>
 Build-Depends:
   debhelper (>= 11),
   debhelper-compat (= 11),
   rustc (>=1.57),
   cargo,
+  meson,
   libgtk-4-dev,
-  libadwaita-1-dev,
-  just,
   pkg-config,
   desktop-file-utils,
 Standards-Version: 4.3.0
@@ -20,4 +19,4 @@ Architecture: amd64 arm64
 Depends:
   ${misc:Depends},
   ${shlibs:Depends}
-Description: XDG Shell Wrapper
+Description: Cosmic Launcher
