--- a/data/com.system76.CosmicLauncher.metainfo.xml.in.in
+++ b/data/com.system76.CosmicLauncher.metainfo.xml.in.in
@@ -1,35 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Ashley Wulber 2019 <ashley@system76.com> -->
 <component type="desktop-application">
-  <id>com.system76.CosmicLauncher</id>
+  <id>@app-id@</id>
   <metadata_license>CC0</metadata_license>
-  <project_license>MPL</project_license>
-  <name>Cosmic Launcher</name>
+  <!-- Insert your license of choice here -->
+  <!-- <project_license>MIT</project_license> -->
+  <name>Iced Launcher</name>
   <summary>Write a GTK + Rust application</summary>
   <description>
     <p>A boilerplate template for GTK + Rust. It uses Meson as a build system and has flatpak support by default.</p>
   </description>
-  <screenshots>
+  <!-- <screenshots>
     <screenshot type="default">
       <image>https://gitlab.gnome.org/bilelmoussaoui/cosmic-launcher/raw/master/data/resources/screenshots/screenshot1.png</image>
       <caption>Main window</caption>
     </screenshot>
-  </screenshots>
+  </screenshots> -->
   <url type="homepage">https://gitlab.gnome.org/bilelmoussaoui/cosmic-launcher</url>
   <url type="bugtracker">https://gitlab.gnome.org/bilelmoussaoui/cosmic-launcher/issues</url>
   <content_rating type="oars-1.0" />
   <releases>
-    <release version="0.0.1" date="2019-07-11" />
+    <release version="0.1.0" date="2019-07-11" />
   </releases>
   <kudos>
      <!--
        GNOME Software kudos:
-       https://gitlab.gnome.org/GNOME/gnome-software/blob/master/doc/kudos.md
+       https://gitlab.gnome.org/GNOME/gnome-software/-/blob/main/doc/kudos.md
      -->
      <kudo>ModernToolkit</kudo>
      <kudo>HiDpiIcon</kudo>
   </kudos>
   <developer_name>Ashley Wulber</developer_name>
   <update_contact>ashley@system76.com</update_contact>
-  <launchable type="desktop-id">com.system76.CosmicLauncher.desktop</launchable>
+  <translation type="gettext">@gettext-package@</translation>
+  <launchable type="desktop-id">@app-id@.desktop</launchable>
 </component>
