--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,8 @@ authors = ["Ashley Wulber <ashley@system76.com>"]
 edition = "2021"
 
 [dependencies]
-freedesktop-icons = {git = "https://github.com/wash2/freedestkop-icons"}
+freedesktop-icons = "0.2.2"
 libcosmic = { git = "https://github.com/pop-os/libcosmic/", branch = "master", default-features = false, features = ["wayland"] }
-iced_sctk = { git = "https://github.com/pop-os/iced-sctk" }
 serde = { version = "1.0.134", features = ["derive"] }
 pop-launcher-service = { git = "https://github.com/wash2/launcher.git", branch = "cosmic-toplevel" }
 pop-launcher = { git = "https://github.com/wash2/launcher.git", branch = "cosmic-toplevel" }
@@ -28,10 +27,3 @@ zbus = "3.5.0"
 glob = "0.3.0"
 freedesktop-desktop-entry = "0.5.0"
 shlex = "1.1.0"
-
-[dependencies.iced]
-git = "https://github.com/pop-os/iced.git"
-branch = "sctk-cosmic"
-# path = "../iced"
-default-features = false
-features = ["image", "svg", "tokio", "wayland"]
