--- a/debian/control
+++ b/debian/control
@@ -7,13 +7,10 @@ Build-Depends:
   debhelper-compat (= 11),
   rustc (>=1.63),
   cargo,
-  meson,
+  just,
   intltool,
-  appstream-util,
-  desktop-file-utils,
   libxkbcommon-dev,
   pkg-config,
-  desktop-file-utils,
 Standards-Version: 4.3.0
 Homepage: https://github.com/pop-os/cosmic-launcher
 
