--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 [dependencies]
 freedesktop-icons = "0.2.3"
-libcosmic = { git = "https://github.com/pop-os/libcosmic/", branch = "master", default-features = false, features = ["wayland", "tokio"] }
+libcosmic = { git = "https://github.com/pop-os/libcosmic/", branch = "cosmic-advanced-text", default-features = false, features = ["wayland", "tokio"] }
 serde = { version = "1.0.152", features = ["derive"] }
 pop-launcher-service = { git = "https://github.com/pop-os/launcher/", rev = "f8ec5b8" }
 pop-launcher = { git = "https://github.com/pop-os/launcher/", rev = "f8ec5b8" }
