--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,27 +5,27 @@ authors = ["Ashley Wulber <ashley@system76.com>"]
 edition = "2021"
 
 [dependencies]
-freedesktop-icons = "0.2.3"
-libcosmic = { git = "https://github.com/pop-os/libcosmic/", branch = "cosmic-advanced-text", default-features = false, features = ["wayland", "tokio"] }
-serde = { version = "1.0.152", features = ["derive"] }
-pop-launcher-service = { git = "https://github.com/pop-os/launcher/", rev = "f8ec5b8" }
-pop-launcher = { git = "https://github.com/pop-os/launcher/", rev = "f8ec5b8" }
-serde_json = "1.0.91"
-tokio-stream = "0.1.8"
-tokio = { version = "1.24.1", features = ["sync", "rt", "process"] }
-log = "0.4"
-pretty_env_logger = "0.4"
-once_cell = "1.17"
-futures = "0.3.21"
-xdg = "2.4.1"
 anyhow = "1.0"
-# Application i18n
+async-stream = "0.3.5"
+console-subscriber = "0.1.9"
+freedesktop-desktop-entry = "0.5.0"
+freedesktop-icons = "0.2.3"
+futures = "0.3.21"
+glob = "0.3.1"
 i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
 i18n-embed-fl = "0.6.4"
-rust-embed = "6.3.0"
-zbus = "3.7.0"
-glob = "0.3.1"
-freedesktop-desktop-entry = "0.5.0"
-shlex = "1.1.0"
+libcosmic = { git = "https://github.com/pop-os/libcosmic/", branch = "cosmic-advanced-text", default-features = false, features = ["wayland", "tokio"] }
+log = "0.4"
 nix = "0.26.2"
-async-stream = "0.3.5"
+once_cell = "1.17"
+pop-launcher = { git = "https://github.com/pop-os/launcher/", rev = "f8ec5b8" }
+pop-launcher-service = { git = "https://github.com/pop-os/launcher/", rev = "f8ec5b8" }
+pretty_env_logger = "0.4"
+rust-embed = "6.3.0"
+serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.91"
+shlex = "1.1.0"
+tokio = { version = "1.24.1", features = ["sync", "rt", "tracing"] }
+tokio-stream = "0.1.8"
+xdg = "2.4.1"
+zbus = "3.7.0"
