chore: dynamically generate .cargo/config.toml which retains defaults for rustflags

--- a/debian/rules
+++ b/debian/rules
@@ -16,9 +16,10 @@ override_dh_auto_clean:
 	fi
 
 	if ! ischroot && test "${VENDOR}" = "1"; then \
-		mkdir -p .cargo; \
-		cargo vendor --sync Cargo.toml | head -n -1 > .cargo/config; \
-		echo 'directory = "vendor"' >> .cargo/config; \
+		cp .cargo/config.default .cargo/config.toml; \
+		cargo vendor --sync Cargo.toml | head -n -1 >> .cargo/config.toml; \
+		echo 'directory = "vendor"' >> .cargo/config.toml; \
+		rm -rf vendor/winapi*gnu*/lib/*.a; \
 		tar pcf vendor.tar vendor; \
 		rm -rf vendor; \
 	fi
