--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ futures = "0.3.21"
 glob = "0.3.1"
 i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
 i18n-embed-fl = "0.6.4"
-libcosmic = { git = "https://github.com/pop-os/libcosmic/", branch = "cosmic-advanced-text", default-features = false, features = ["wayland", "tokio"] }
+libcosmic = { git = "https://github.com/pop-os/libcosmic/", rev = "e056e8c", default-features = false, features = ["wayland", "tokio"] }
 log = "0.4"
 nix = "0.26.2"
 once_cell = "1.17"
@@ -27,4 +27,4 @@ serde_json = "1.0.91"
 shlex = "1.1.0"
 tokio = { version = "1.24.1", features = ["sync", "rt", "tracing"] }
 xdg = "2.4.1"
-zbus = "3.7.0"
+zbus = "3.13.1"
