--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,9 @@ futures = "0.3.21"
 glob = "0.3.1"
 i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
 i18n-embed-fl = "0.6.4"
-libcosmic = { git = "https://github.com/pop-os/libcosmic/", rev = "bf456a0", default-features = false, features = ["wayland", "tokio"] }
-log = "0.4"
+libcosmic = { git = "https://github.com/pop-os/libcosmic/", default-features = false, features = ["wayland", "tokio"] }
+# libcosmic = { path = "../libcosmic", default-features = false, features = ["wayland", "tokio"] }
+tracing = "0.1"
 nix = "0.26.2"
 once_cell = "1.17"
 pop-launcher = { git = "https://github.com/pop-os/launcher/", rev = "f8ec5b8" }
