--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ freedesktop-desktop-entry = "0.5.0"
 freedesktop-icons = "0.2.3"
 futures = "0.3.21"
 i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
-libcosmic = { git = "https://github.com/pop-os/libcosmic/", default-features = false, features = ["wayland", "tokio"] }
-# libcosmic = { path = "../libcosmic", default-features = false, features = ["wayland", "tokio"] }
+i18n-embed-fl = "0.6.4"
+libcosmic = { git = "https://github.com/pop-os/libcosmic/", default-features = false, features = ["wayland", "tokio", "single-instance"] }
+# libcosmic = { path = "../libcosmic", default-features = false, features = ["wayland", "tokio", "single-instance"] }
 tracing = "0.1"
 nix = {version = "0.27.1", features = ["process"]}
 once_cell = "1.17"
@@ -25,4 +26,4 @@ serde_json = "1.0.91"
 shlex = "1.1.0"
 tokio = { version = "1.24.1", features = ["sync", "rt", "tracing"] }
 xdg = "2.4.1"
-zbus = "3.13.1"
+clap = {version = "4.4.8", features = ["derive"] }
