--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,5 @@ shlex = "1.1.0"
 tokio = { version = "1.24.1", features = ["sync", "rt", "tracing"] }
 xdg = "2.4.1"
 clap = {version = "4.4.8", features = ["derive"] }
+switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
+zbus = { version = "3.14", default-features = false, features = ["tokio"] }
