--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "rust-analyzer.check.overrideCommand": ["just", "check-json"]
+    "rust-analyzer.check.overrideCommand": [
+        "just",
+        "check-json"
+    ],
+    "githubPullRequests.ignoredPullRequestBranches": [
+        "master"
+    ]
 }
