--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,4 +32,6 @@ xdg = "2.4.1"
 clap = {version = "4.4.8", features = ["derive"] }
 switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
 zbus = { version = "3.14", default-features = false, features = ["tokio"] }
+unicode-truncate = "0.2.0"
+unicode-width = "0.1.11"
 
