--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,20 @@ async-stream = "0.3.5"
 console-subscriber = "0.1.9"
 freedesktop-icons = "0.2.3"
 futures = "0.3.21"
-i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
+i18n-embed = { version = "0.13.4", features = [
+    "fluent-system",
+    "desktop-requester",
+] }
 i18n-embed-fl = "0.6.4"
-libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = ["wayland", "tokio", "single-instance", "dbus-config", "desktop", ] }
+libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
+    "wayland",
+    "tokio",
+    "single-instance",
+    "dbus-config",
+    "desktop",
+] }
 tracing = "0.1"
-nix = {version = "0.27.1", features = ["process"]}
+nix = { version = "0.27.1", features = ["process"] }
 once_cell = "1.17"
 pop-launcher = { git = "https://github.com/pop-os/launcher/", rev = "091581c" }
 pop-launcher-service = { git = "https://github.com/pop-os/launcher/", rev = "091581c" }
@@ -29,9 +38,8 @@ serde_json = "1.0.91"
 shlex = "1.1.0"
 tokio = { version = "1.24.1", features = ["sync", "rt"] }
 xdg = "2.4.1"
-clap = {version = "4.4.8", features = ["derive"] }
+clap = { version = "4.4.8", features = ["derive"] }
 switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
-zbus = { version = "3.14", default-features = false, features = ["tokio"] }
+zbus = { version = "4.2.1", default-features = false, features = ["tokio"] }
 unicode-truncate = "0.2.0"
 unicode-width = "0.1.11"
-
