--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Ashley Wulber <ashley@system76.com>"]
 edition = "2021"
 
 [features]
-default = []
+default = ["wgpu"]
 wgpu = ["libcosmic/wgpu"]
 console = ["tokio/tracing"]
 
