Revert "feat: enable wgpu renderer by default"
Increases memory consumption too much at the moment.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Ashley Wulber <ashley@system76.com>"]
 edition = "2021"
 
 [features]
-default = ["wgpu"]
+default = []
 wgpu = ["libcosmic/wgpu"]
 console = ["tokio/tracing"]
 
