do not close the service every time

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,3 +47,7 @@ switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" 
 zbus = { version = "4.2.1", default-features = false, features = ["tokio"] }
 unicode-truncate = "1.0.0"
 unicode-width = "0.1.11"
+
+[patch."https://github.com/pop-os/launcher/"]
+pop-launcher = { path = "../launcher" }
+pop-launcher-service = { path = "../launcher/service" }
