--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,11 +28,12 @@ libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
     "xdg-portal",
 ] }
 tracing = "0.1"
+tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "fmt", "env-filter"] }
+tracing-journald = "0.3.0"
 nix = { version = "0.27.1", features = ["process"] }
 once_cell = "1.17"
 pop-launcher = { git = "https://github.com/pop-os/launcher/", rev = "091581c" }
 pop-launcher-service = { git = "https://github.com/pop-os/launcher/", rev = "091581c" }
-pretty_env_logger = "0.5"
 rust-embed = "6.3.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
