--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,12 @@ libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
     "xdg-portal",
 ] }
 tracing = "0.1"
+tracing-subscriber = { version = "0.3.18", default-features = false, features = [
+    "std",
+    "fmt",
+    "env-filter",
+] }
+tracing-journald = "0.3.0"
 nix = { version = "0.27.1", features = ["process"] }
 once_cell = "1.17"
 pop-launcher = { git = "https://github.com/pop-os/launcher/", rev = "fca3b25" }
