--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,5 +55,5 @@ unicode-truncate = "1.0.0"
 unicode-width = "0.1.11"
 
 [patch."https://github.com/pop-os/launcher/"]
-pop-launcher = { path = "../launcher" }
-pop-launcher-service = { path = "../launcher/service" }
+pop-launcher = { git = "https://github.com/wiiznokes/launcher/", rev = "86a54d54a68b832d404ef83a03af84cf9ef3e694" }
+pop-launcher-service = { git = "https://github.com/wiiznokes/launcher/", rev = "86a54d54a68b832d404ef83a03af84cf9ef3e694" }
