--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,11 @@ libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
     "xdg-portal",
 ] }
 tracing = "0.1"
-tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "fmt", "env-filter"] }
+tracing-subscriber = { version = "0.3.18", default-features = false, features = [
+    "std",
+    "fmt",
+    "env-filter",
+] }
 tracing-journald = "0.3.0"
 nix = { version = "0.27.1", features = ["process"] }
 once_cell = "1.17"
@@ -47,5 +51,5 @@ unicode-truncate = "1.0.0"
 unicode-width = "0.1.11"
 
 [patch."https://github.com/pop-os/launcher/"]
-pop-launcher = { path = "../launcher" }
-pop-launcher-service = { path = "../launcher/service" }
+pop-launcher = { git = "https://github.com/wiiznokes/launcher/", rev = "86a54d54a68b832d404ef83a03af84cf9ef3e694" }
+pop-launcher-service = { git = "https://github.com/wiiznokes/launcher/", rev = "86a54d54a68b832d404ef83a03af84cf9ef3e694" }
