--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,8 +39,10 @@ tracing-subscriber = { version = "0.3.18", default-features = false, features = 
 tracing-journald = "0.3.0"
 nix = { version = "0.27.1", features = ["process"] }
 once_cell = "1.17"
-pop-launcher = { git = "https://github.com/pop-os/launcher/", rev = "fca3b25" }
-pop-launcher-service = { git = "https://github.com/pop-os/launcher/", rev = "fca3b25" }
+# pop-launcher = { git = "https://github.com/pop-os/launcher/", rev = "fca3b25" }
+# pop-launcher-service = { git = "https://github.com/pop-os/launcher/", rev = "fca3b25" }
+pop-launcher = { path = "../launcher" }
+pop-launcher-service = { path = "../launcher/service" }
 pretty_env_logger = "0.5"
 rust-embed = "6.3.0"
 serde = { version = "1.0.152", features = ["derive"] }
@@ -54,6 +56,6 @@ zbus = { version = "4.2.1", default-features = false, features = ["tokio"] }
 unicode-truncate = "1.0.0"
 unicode-width = "0.1.11"
 
-[patch."https://github.com/pop-os/launcher/"]
-pop-launcher = { git = "https://github.com/wiiznokes/launcher/", rev = "86a54d54a68b832d404ef83a03af84cf9ef3e694" }
-pop-launcher-service = { git = "https://github.com/wiiznokes/launcher/", rev = "86a54d54a68b832d404ef83a03af84cf9ef3e694" }
+# [patch."https://github.com/pop-os/launcher/"]
+# pop-launcher = { git = "https://github.com/wiiznokes/launcher/", rev = "86a54d54a68b832d404ef83a03af84cf9ef3e694" }
+# pop-launcher-service = { git = "https://github.com/wiiznokes/launcher/", rev = "86a54d54a68b832d404ef83a03af84cf9ef3e694" }
