--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,10 +39,8 @@ tracing-subscriber = { version = "0.3.18", default-features = false, features = 
 tracing-journald = "0.3.0"
 nix = { version = "0.27.1", features = ["process"] }
 once_cell = "1.17"
-# pop-launcher = { git = "https://github.com/pop-os/launcher/", rev = "fca3b25" }
-# pop-launcher-service = { git = "https://github.com/pop-os/launcher/", rev = "fca3b25" }
-pop-launcher = { path = "../launcher" }
-pop-launcher-service = { path = "../launcher/service" }
+pop-launcher = { git = "https://github.com/pop-os/launcher/" }
+pop-launcher-service = { git = "https://github.com/pop-os/launcher/" }
 pretty_env_logger = "0.5"
 rust-embed = "6.3.0"
 serde = { version = "1.0.152", features = ["derive"] }
