--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ console = ["tokio/tracing"]
 [dependencies]
 async-stream = "0.3.5"
 console-subscriber = "0.1.9"
-freedesktop-icons = "0.2.3"
+freedesktop-icons = { package = "cosmic-freedesktop-icons", git = "https://github.com/pop-os/freedesktop-icons" }
 futures = "0.3.21"
 i18n-embed = { version = "0.13.4", features = [
     "fluent-system",
