Polish translation for desktop entry

--- a/data/com.system76.CosmicLauncher.desktop
+++ b/data/com.system76.CosmicLauncher.desktop
@@ -1,6 +1,8 @@
 [Desktop Entry]
 Name=Launcher
+Name[pl]=Program startowy
 Comment=COSMIC Launcher
+Comment[pl]=Program startowy COSMIC
 Type=Application
 Exec=cosmic-launcher
 Terminal=false
