Update Hungarian translations

--- a/data/com.system76.CosmicLauncher.desktop
+++ b/data/com.system76.CosmicLauncher.desktop
@@ -1,6 +1,8 @@
 [Desktop Entry]
 Name=Launcher
+Name[hu]=Indító
 Comment=COSMIC Launcher
+Comment[hu]=COSMIC Indító
 Type=Application
 Exec=cosmic-launcher
 Terminal=false
