i18n - update portuguese translations

--- a/data/com.system76.CosmicLauncher.desktop
+++ b/data/com.system76.CosmicLauncher.desktop
@@ -2,11 +2,11 @@
 Name=Launcher
 Name[hu]=Indító
 Name[pl]=Program startowy
-Name[pt_BR]=Lançador
+Name[pt]=Lançador
 Comment=COSMIC Launcher
 Comment[hu]=COSMIC Indító
 Comment[pl]=Program startowy COSMIC
-Comment[pt_BR]=Launcher do COSMIC
+Comment[pt]=Botão de inicialização do COSMIC
 Type=Application
 Exec=cosmic-launcher
 Terminal=false
