--- a/data/com.system76.CosmicLauncher.desktop
+++ b/data/com.system76.CosmicLauncher.desktop
@@ -1,9 +1,11 @@
 [Desktop Entry]
 Name=Launcher
+Name[ar]=المُشَغِّل
 Name[hu]=Indító
 Name[pl]=Program startowy
 Name[pt]=Lançador
 Comment=COSMIC Launcher
+Comment[ar]=مُشَغِّلُ كوزمِك
 Comment[hu]=COSMIC Indító
 Comment[pl]=Program startowy COSMIC
 Comment[pt]=Botão de inicialização do COSMIC
@@ -13,6 +15,7 @@ Terminal=false
 Categories=COSMIC;
 # Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 Keywords=COSMIC;ICED;
+Keywords[ar]=كوزمِك;آيسِد;
 # Translators: Do NOT translate or transliterate this text (this is an icon file name)!
 Icon=com.system76.CosmicLauncher
 StartupNotify=true
