--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,13 +50,13 @@ tokio = { version = "1.43.0", features = ["sync", "rt"] }
 xdg = "2.5.2"
 clap = { version = "4.5.30", features = ["derive"] }
 switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
-zbus = { version = "4.0", default-features = false, features = ["tokio"] }
+zbus = { version = "5.0", default-features = false, features = ["tokio"] }
 unicode-truncate = "2.0.0"
 unicode-width = "0.2.0"
 # [patch.'https://github.com/pop-os/libcosmic']
-# libcosmic = { path = "../libcosmic" }
-# cosmic-config = { path = "../libcosmic/cosmic-config" }
-# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
+# libcosmic = { path = "../../cosmic/libcosmic" }
+# cosmic-config = { path = "../../cosmic/libcosmic/cosmic-config" }
+# cosmic-theme = { path = "../../cosmic/libcosmic/cosmic-theme" }
 # [patch."https://github.com/pop-os/launcher/"]
 # pop-launcher = { git = "https://github.com/wiiznokes/launcher/", rev = "86a54d54a68b832d404ef83a03af84cf9ef3e694" }
 # pop-launcher-service = { git = "https://github.com/wiiznokes/launcher/", rev = "86a54d54a68b832d404ef83a03af84cf9ef3e694" }
