i18n(sk): Update translations

--- a/data/com.system76.CosmicLauncher.desktop
+++ b/data/com.system76.CosmicLauncher.desktop
@@ -5,12 +5,14 @@ Name[ar]=المُشَغِّل
 Name[hu]=Indító
 Name[pl]=Program startowy
 Name[pt]=Lançador
+Name[sk]=Spúšťač COSMIC
 Comment=COSMIC Launcher
 Comment[zh_CN]=COSMIC 启动器
 Comment[ar]=مُشَغِّلُ كوزمِك
 Comment[hu]=COSMIC Indító
 Comment[pl]=Program startowy COSMIC
 Comment[pt]=Botão de inicialização do COSMIC
+Comment[sk]=Spúšťač aplikácií pre prostredie COSMIC
 Type=Application
 Exec=cosmic-launcher
 Terminal=false
