--- a/data/com.system76.CosmicLauncher.desktop
+++ b/data/com.system76.CosmicLauncher.desktop
@@ -8,7 +8,7 @@ Name[pt]=Lançador
 Name[sk]=Spúšťač COSMIC
 Comment=COSMIC Launcher
 Comment[zh_CN]=COSMIC 启动器
-Comment[ar]=مُشَغِّلُ كوزمِك
+Comment[ar]=مُشَغِّلُ COSMIC
 Comment[hu]=COSMIC Indító
 Comment[pl]=Program startowy COSMIC
 Comment[pt]=Botão de inicialização do COSMIC
@@ -19,7 +19,7 @@ Terminal=false
 Categories=COSMIC;
 # Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 Keywords=COSMIC;ICED;
-Keywords[ar]=كوزمِك;آيسِد;
+Keywords[ar]=COSMIC;آيسِد;
 # Translators: Do NOT translate or transliterate this text (this is an icon file name)!
 Icon=com.system76.CosmicLauncher
 StartupNotify=true
