Swedish translation of .desktop file

--- a/data/com.system76.CosmicLauncher.desktop
+++ b/data/com.system76.CosmicLauncher.desktop
@@ -7,6 +7,7 @@ Name[hu]=Indító
 Name[pl]=Program startowy
 Name[pt]=Lançador
 Name[sk]=Spúšťač COSMIC
+Name[sv]=Programstartare
 Comment=COSMIC Launcher
 Comment[zh_CN]=COSMIC 启动器
 Comment[ar]=مُشَغِّلُ COSMIC
@@ -15,6 +16,7 @@ Comment[hu]=COSMIC Indító
 Comment[pl]=Program startowy COSMIC
 Comment[pt]=Botão de inicialização do COSMIC
 Comment[sk]=Spúšťač aplikácií pre prostredie COSMIC
+Comment[sv]=COSMIC Programstartare
 Type=Application
 Exec=cosmic-launcher
 Terminal=false
