--- a/data/com.system76.CosmicLauncher.desktop
+++ b/data/com.system76.CosmicLauncher.desktop
@@ -2,7 +2,7 @@
 Name=Launcher
 Name[zh_CN]=启动器
 Name[ar]=المُشَغِّل
-Name[cs]=Spouštěč COSMIC
+Name[cs]=Spouštěč
 Name[hu]=Indító
 Name[pl]=Program startowy
 Name[pt]=Lançador
