Russian translation for .desktop file

--- a/data/com.system76.CosmicLauncher.desktop
+++ b/data/com.system76.CosmicLauncher.desktop
@@ -6,6 +6,7 @@ Name[cs]=Spouštěč
 Name[hu]=Indító
 Name[pl]=Program startowy
 Name[pt]=Lançador
+Name[ru]=Панель запуска
 Name[sk]=Spúšťač COSMIC
 Name[sv]=Programstartare
 Comment=COSMIC Launcher
@@ -15,6 +16,7 @@ Comment[cs]=Spouštěč aplikací pro prostředí COSMIC
 Comment[hu]=COSMIC Indító
 Comment[pl]=Program startowy COSMIC
 Comment[pt]=Botão de inicialização do COSMIC
+Comment[ru]=Панель запуска COSMIC
 Comment[sk]=Spúšťač aplikácií pre prostredie COSMIC
 Comment[sv]=COSMIC Programstartare
 Type=Application
