feat: use superior icon resolution from libcosmic
Enables the 'desktop' feature for libcosmic and uses 'as_cosmic_icon()' for search results to match the Applications overview behavior.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ i18n-embed-fl = "0.10"
 libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
     "autosize",
     "dbus-config",
+    "desktop",
     "winit",
     "multi-window",
     "wayland",
