--- a/data/com.system76.CosmicLauncher.desktop
+++ b/data/com.system76.CosmicLauncher.desktop
@@ -9,6 +9,7 @@ Name[pt]=Lançador
 Name[ru]=Панель запуска
 Name[sk]=Spúšťač COSMIC
 Name[sv]=Programstartare
+Name[it]=Launcher
 Comment=COSMIC Launcher
 Comment[zh_CN]=COSMIC 启动器
 Comment[ar]=مُشَغِّلُ COSMIC
@@ -19,6 +20,7 @@ Comment[pt]=Botão de inicialização do COSMIC
 Comment[ru]=Панель запуска COSMIC
 Comment[sk]=Spúšťač aplikácií pre prostredie COSMIC
 Comment[sv]=COSMIC Programstartare
+Comment[it]=Launcher COSMIC
 Type=Application
 Exec=cosmic-launcher
 Terminal=false
